// MarkFlow Prisma 스키마 — 정본: Docs/08-ERD.md / 08-ERD.dbml
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  OWNER
  EDITOR
  VIEWER
}

enum NodeType {
  idea
  doc
  task
  decision
  data
}

enum ActivityTarget {
  NODE
  EDGE
  PROJECT
}

enum ActivityAction {
  CREATE
  UPDATE
  MOVE
  DELETE
  RESTORE
  CONNECT
  DISCONNECT
  RENAME
}

model User {
  id           String          @id @default(uuid()) @db.Uuid
  email        String          @unique
  passwordHash String
  name         String
  createdAt    DateTime        @default(now())
  updatedAt    DateTime        @updatedAt

  ownedProjects Project[]      @relation("ProjectOwner")
  memberships   ProjectMember[]
  messages      ChatMessage[]
  activities    ActivityLog[]
}

model Project {
  id        String    @id @default(uuid()) @db.Uuid
  name      String
  ownerId   String    @db.Uuid
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  owner      User            @relation("ProjectOwner", fields: [ownerId], references: [id])
  members    ProjectMember[]
  nodes      Node[]
  edges      Edge[]
  messages   ChatMessage[]
  activities ActivityLog[]

  @@index([ownerId])
  @@index([deletedAt])
}

model ProjectMember {
  id        String   @id @default(uuid()) @db.Uuid
  projectId String   @db.Uuid
  userId    String   @db.Uuid
  role      Role
  createdAt DateTime @default(now())

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([projectId, userId])
  // 프로젝트당 OWNER 1명 보장은 raw SQL 마이그레이션으로 추가:
  // CREATE UNIQUE INDEX project_single_owner ON "ProjectMember"("projectId") WHERE role = 'OWNER';
}

model Node {
  id        String    @id @default(uuid()) @db.Uuid
  projectId String    @db.Uuid
  title     String    @default("")
  markdown  String    @default("")
  type      NodeType  @default(idea)
  collapsed Boolean   @default(true)
  posX      Float     @default(0)
  posY      Float     @default(0)
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  project  Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  outgoing Edge[]  @relation("EdgeSource")
  incoming Edge[]  @relation("EdgeTarget")

  @@index([projectId, deletedAt])
}

model Edge {
  id        String   @id @default(uuid()) @db.Uuid
  projectId String   @db.Uuid
  sourceId  String   @db.Uuid
  targetId  String   @db.Uuid
  createdAt DateTime @default(now())

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  source  Node    @relation("EdgeSource", fields: [sourceId], references: [id], onDelete: Cascade)
  target  Node    @relation("EdgeTarget", fields: [targetId], references: [id], onDelete: Cascade)

  @@unique([sourceId, targetId])
  @@index([projectId])
}

model ChatMessage {
  id        String   @id @default(uuid()) @db.Uuid
  projectId String   @db.Uuid
  userId    String   @db.Uuid
  content   String
  createdAt DateTime @default(now())

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id])

  @@index([projectId, createdAt])
}

model ActivityLog {
  id         String         @id @default(uuid()) @db.Uuid
  projectId  String         @db.Uuid
  userId     String         @db.Uuid
  targetType ActivityTarget
  targetId   String?        @db.Uuid // 폴리모픽 참조(NODE/EDGE/PROJECT). FK 제약 없음
  action     ActivityAction
  createdAt  DateTime       @default(now())

  project Project @relation(fields: [projectId], references: [id], onDelete: Cascade)
  user    User    @relation(fields: [userId], references: [id])

  @@index([projectId, createdAt])
  @@index([targetType, targetId, createdAt])
}
