// =====================================================================
// MarkFlow 데이터 모델 (ERD) — DBML
// PostgreSQL + Prisma 기준 / v1.1 (화면 이미지 재검증 반영) / 2026-06-24
//
// 사용법: https://dbdiagram.io 에 붙여넣으면 다이어그램으로 렌더링됩니다.
//        (CLI) npx @dbml/cli  ->  dbml2sql 08-ERD.dbml --postgres
// 상세 설명·정책은 08-ERD.md, API 매핑은 09-API-Spec.md 참고.
// =====================================================================

Project MarkFlow {
  database_type: 'PostgreSQL'
  Note: '마크다운 노드 기반 실시간 협업 캔버스. 캔버스 본문은 Node/Edge로 정규화. 프로젝트=캔버스 1:1. 실시간은 Liveblocks.'
}

// ---------------------------------------------------------------------
// Enums
// ---------------------------------------------------------------------

Enum role {
  OWNER
  EDITOR
  VIEWER
}

Enum node_type {
  idea
  doc
  task
  decision
  data
}

Enum activity_target {
  NODE
  EDGE
  PROJECT
}

Enum activity_action {
  CREATE
  UPDATE
  MOVE
  DELETE
  RESTORE
  CONNECT
  DISCONNECT
  RENAME
}

// ---------------------------------------------------------------------
// Tables
// ---------------------------------------------------------------------

Table User {
  id            uuid         [pk, default: `gen_random_uuid()`]
  email         varchar(255) [not null, unique, note: '로그인 ID. 정규식 .+@.+\\..+ 검증']
  passwordHash  varchar(255) [not null, note: 'bcrypt/argon2 해시. 평문 저장 금지, 응답 노출 금지']
  name          varchar(60)  [not null, note: '표시 이름(아바타 이니셜·채팅·로그)']
  createdAt     timestamptz  [not null, default: `now()`]
  updatedAt     timestamptz  [not null, default: `now()`]

  Note: 'JWT 자체 구현(이메일/비밀번호). PRD §4.2, §8 User'
}

Table Project {
  id         uuid         [pk, default: `gen_random_uuid()`]
  name       varchar(120) [not null, note: '프로젝트명(=캔버스명). 소유자만 변경']
  ownerId    uuid         [not null, note: '생성자(소유자). 역할 단일소스는 ProjectMember, 빠른 조회용 비정규화']
  createdAt  timestamptz  [not null, default: `now()`]
  updatedAt  timestamptz  [not null, default: `now()`]
  deletedAt  timestamptz  [null, note: '휴지통(소프트 삭제). NULL=활성']

  Indexes {
    ownerId
    deletedAt
  }
  Note: '프로젝트=캔버스 1:1(별도 Canvas 없음). 생성 시 ProjectMember(OWNER) 트랜잭션 동반. PRD §4.3, §8'
}

Table ProjectMember {
  id         uuid        [pk, default: `gen_random_uuid()`]
  projectId  uuid        [not null]
  userId     uuid        [not null]
  role       role        [not null]
  createdAt  timestamptz [not null, default: `now()`]

  Indexes {
    (projectId, userId) [unique, note: '한 유저는 한 프로젝트에 1개 역할']
    // 부분 유니크(프로젝트당 OWNER 1명)는 DBML 미지원 → raw SQL 마이그레이션:
    // CREATE UNIQUE INDEX project_single_owner ON "ProjectMember"("projectId") WHERE role = 'OWNER';
  }
  Note: '역할의 단일 소스. 권한 검사는 REST+실시간 양쪽 서버에서. PRD §6, §8'
}

Table Node {
  id         uuid         [pk, default: `gen_random_uuid()`]
  projectId  uuid         [not null, note: '소속 캔버스']
  title      varchar(200) [not null, default: '', note: '노드 제목(접힘 시 표시)']
  markdown   text         [not null, default: '', note: '.md 본문']
  type       node_type    [not null, default: 'idea', note: 'idea/doc/task/decision/data (화면 §1.2 컬러)']
  collapsed  boolean      [not null, default: true, note: '접기/펼치기(양방향 바인딩)']
  posX       double       [not null, default: 0, note: 'React Flow position.x']
  posY       double       [not null, default: 0, note: 'React Flow position.y']
  createdAt  timestamptz  [not null, default: `now()`]
  updatedAt  timestamptz  [not null, default: `now()`]
  deletedAt  timestamptz  [null, note: '휴지통(소프트 삭제)']

  Indexes {
    (projectId, deletedAt) [note: '활성 노드 목록 조회 최적화']
  }
  Note: '마크다운 노드. 좌표는 posX/posY 분리. PRD §4.4.1/§4.4.2, §8'
}

Table Edge {
  id         uuid        [pk, default: `gen_random_uuid()`]
  projectId  uuid        [not null]
  sourceId   uuid        [not null, note: '시작 노드(화살표 출발)']
  targetId   uuid        [not null, note: '도착 노드(화살표 방향)']
  createdAt  timestamptz [not null, default: `now()`]

  Indexes {
    projectId
    (sourceId, targetId) [unique, note: '동일 방향 중복 엣지 방지']
  }
  Note: 'CHECK(sourceId <> targetId)는 DBML 미지원 → SQL로 추가. 노드 소프트삭제 시 엣지는 물리삭제(복구 안 함). PRD §4.4.1, §8'
}

Table ChatMessage {
  id         uuid        [pk, default: `gen_random_uuid()`]
  projectId  uuid        [not null, note: '채팅방(=캔버스 룸)']
  userId     uuid        [not null, note: '작성자']
  content    text        [not null]
  createdAt  timestamptz [not null, default: `now()`, note: '정렬 기준']

  Indexes {
    (projectId, createdAt) [note: '시간순 페이지네이션']
  }
  Note: '프로젝트 단위 채팅. 우측 패널 탭=우하단 토글=같은 방. PRD §4.4.3, §8'
}

Table ActivityLog {
  id          uuid            [pk, default: `gen_random_uuid()`]
  projectId   uuid            [not null, note: '프로젝트 단위 타임라인']
  userId      uuid            [not null, note: '행위자']
  targetType  activity_target [not null, note: 'NODE/EDGE/PROJECT']
  targetId    uuid            [null, note: '폴리모픽 참조(FK 아님). 불변 로그 — 대상 영구삭제돼도 댕글링 유지. 특정 대상 없는 이벤트만 NULL']
  action      activity_action [not null]
  createdAt   timestamptz     [not null, default: `now()`]

  Indexes {
    (projectId, createdAt) [note: '전체 타임라인']
    (targetType, targetId, createdAt) [note: '노드별 히스토리 조회']
  }
  Note: '활동 로그(변경 로그). 노드 전용 NodeHistory를 폴리모픽으로 일반화(화면 06-canvas-expanded). 내용 스냅샷·diff 없음(PRD #3). 노드 히스토리=targetType=NODE 필터 뷰'
}

// 인증: MVP는 액세스 토큰(JWT)만 사용(PRD #5, stateless). 별도 토큰 테이블 없음.
// 강제 로그아웃/토큰 회전이 필요해지면 RefreshToken 테이블을 향후 추가(현재 미포함).

// ---------------------------------------------------------------------
// Relationships (FK)  — del: cascade / set null 은 ON DELETE 정책
// ---------------------------------------------------------------------

// User 1 - N Project(owner)
Ref: Project.ownerId > User.id

// Project 1 - N ProjectMember (멤버), User 1 - N ProjectMember
Ref: ProjectMember.projectId > Project.id [delete: cascade]
Ref: ProjectMember.userId    > User.id    [delete: cascade]

// Project 1 - N Node / Edge / ChatMessage / ActivityLog
Ref: Node.projectId        > Project.id [delete: cascade]
Ref: Edge.projectId        > Project.id [delete: cascade]
Ref: ChatMessage.projectId > Project.id [delete: cascade]
Ref: ActivityLog.projectId > Project.id [delete: cascade]

// Node 1 - N Edge (source/target)
Ref: Edge.sourceId > Node.id [delete: cascade]
Ref: Edge.targetId > Node.id [delete: cascade]

// User 1 - N ChatMessage / ActivityLog (행위자)
Ref: ChatMessage.userId > User.id
Ref: ActivityLog.userId > User.id

// NOTE: ActivityLog.targetId 는 폴리모픽(NODE/EDGE/PROJECT)이라 FK Ref 를 두지 않는다.
//       무결성은 애플리케이션에서 보장. 표시 라벨은 read 시점 조인 + 폴백("(삭제된 항목)").
